--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "dotenv": "^16.4.7",
     "eslint-plugin-react": "^7.32.2",
     "googleapis": "^71.0.0",
+    "mui-styles": "^2.0.7",
     "multer": "^1.4.2",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
