--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "next-auth-dynamodb": "^0.3.3",
+    "next-connect": "^1.0.0",
     "next-session": "^3.4.0",
     "nodemailer": "^6.7.5",
     "prettier": "2.8.8",
