--- a/package.json
+++ b/package.json
@@ -12,10 +12,8 @@
   },
   "dependencies": {
     "@date-io/date-fns": "1.3.13",
-
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
-
     "@material-ui/core": "^4.11.3",
     "@material-ui/data-grid": "^4.0.0-alpha.29",
     "@material-ui/icons": "^4.11.2",
@@ -35,18 +33,15 @@
     "dotenv": "^16.4.7",
     "eslint-plugin-react": "^7.32.2",
     "googleapis": "^71.0.0",
-
     "mui-styles": "^2.0.7",
-
     "multer": "^1.4.2",
     "next": "15.1.4",
     "next-auth": "^4.24.11",
     "next-auth-dynamodb": "^0.3.3",
-
     "next-connect": "^1.0.0",
-
     "next-session": "^3.4.0",
     "nodemailer": "^6.7.5",
+    "papaparse": "^5.5.2",
     "prettier": "2.8.8",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
